2003-08-25  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkactiongroup.h (GtkActionGroupEntryType): Namespace the enum
	values properly. Sorry about the resize grip trouble, Owen.  (#120621)

	* gtk/gtkactiongroup.c: 
	* demos/gtk-demo/appwindow.c: 
	* tests/testmerge.c: 
	* tests/testactions.c: Use new GtkActionGroupEntryType enum.  

Sun Aug 24 17:14:44 2003  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtk.h: Remove reference to gtkresizegrip.h.

Sun Aug 24 17:03:44 2003  Owen Taylor  <otaylor@redhat.com>

	* gtk/Makefile.am: Fix accidental commit of references
	to gtkresizegrip.[ch]

Sun Aug 24 17:00:03 2003  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkrc.c: Fix some missing initializations of
	rc_file->directory.

2003-08-24  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkaction.[ch]: 
	* gtk/gtktoggleaction.[ch]: 
	* gtk/gtktoggleactionprivate.h: 
	* gtk/gtkradioaction.[ch]: 
	* gtk/gtkactiongroup.[ch]: 
	* gtk/gtkmenumerge.[ch]: A model-view separation for menus and
	toolbars, using the EggMenu code by James Henstridge.

	* gtk/gtk.h: Include new headers.
	* gtk/Makefile.am: Add new files.

	* tests/testactions.c: Test for actions.
	* tests/testmerge.c: Test for menu merging.
	* tests/merge-[123].ui: Test data for testmerge. 
	* tests/Makefile.am: Add testactions and testmerge.

	* demos/gtk-demo/appwindow.c: Use GtkMenuMerge to construct the 
	menubar and toolbar.
	
Sat Aug 23 21:40:18 2003  Owen Taylor  <otaylor@redhat.com>
 
 	* gtk/gtkrc.c (gtk_rc_context_parse_one_file): Fix 
 	problem where rc_file->directory wasn't always getting
	set. (#120549, Luis Villa)
 
2003-08-22  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "ne" to ALL_LINGUAS.

Thu Aug 21 16:00:36 2003  Owen Taylor  <otaylor@redhat.com>
 
 	* gtk/gtkrc.c: Keep a list of current GtkRcFiles
 	being parsed, not just the directories for those
 	files. Use that to catch recursion. (Part of
 	#114988)
 
Thu Aug 21 21:27:45 2003  Kristian Rietveld  <kris@gtk.org>

	Merge from stable.
