@@ -1,8 +1,14 @@
 2003-08-25  Matthias Clasen  <maclas@gmx.de>
 
+	* gtk/gtkactiongroup.[hc] (gtk_action_group_set_translate_func,
+	gtk_action_group_set_translation_domain): Hooks for translation of
+	label and tooltip in GtkActionGroupEntries.  (#120620)
+
+2003-08-25  Matthias Clasen  <maclas@gmx.de>
+
 	* gtk/gtkactiongroup.h (GtkActionGroupEntryType): Namespace the enum
 	values properly. Sorry about the resize grip trouble, Owen.  (#120621)
-
+	
 	* gtk/gtkactiongroup.c: 
 	* demos/gtk-demo/appwindow.c: 
 	* tests/testmerge.c: 
